--- a/client/index.html
+++ b/client/index.html
@@ -52,5 +52,6 @@
 <script src="app/domain/negociacao/negociacao.js"></script>
 <script src="app/controllers/NegociacaoController.js"></script>
 <script src="app/app.js"></script>
+<script src="app/ui/converters/DateConverter.js"></script>
 </body>
 </html>
