--- a/client/index.html
+++ b/client/index.html
@@ -53,5 +53,8 @@
 <script src="app/controllers/NegociacaoController.js"></script>
 <script src="app/app.js"></script>
 <script src="app/ui/converters/DateConverter.js"></script>
+
+
+<script	src="app/domain/negociacao/Negociacoes.js"></script>
 </body>
 </html>
